Mon Oct 18 17:04:27 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in doc/Makefile.am: fix for RedHat bug #136072
	  to include EXSLT doc in libxslt package.

Thu Oct 14 22:43:22 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* configure.in, config.h.in, libexslt/date.c: changed date.c to use
	  gmtime_r if available (bug 129983)
	* libexslt/functions.c: fixed a namespace problem concerning a
	  function with a namespace-qualified name (bug 155197)

Tue Oct 12 03:54:44 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/namespaces.c: fixed a bug in namespace lookup exhibited
	  by the recent namespace tests in libxml2

Thu Oct  7 16:15:15 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixed a problem of tree structure raised
	  by the new libxml2 tree checking code.

Thu Sep 30 11:28:03 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed problem with negative periods
	  (bug 154021)
	* tests/exslt/date/sum.2.out: changed expected output, now
	  agrees with comments in sum.2.xml test data file
	  
Thu Sep 30 08:19:28 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/templates.c: patch from Mark Vakoc about an incorrect
	  attribute document pointer.

Thu Sep 30 08:13:57 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* doc/tutorial2/libxslt_pipes.*: updated the tutorial from Panagiotis
	  Louridas

Thu Sep 30 00:10:09 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/*: release of 1.1.11, rebuilt the docs

Wed Sep 29 15:42:33 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: try to fix #153137 but without a test case
	  it's shooting in the dark.

Tue Sep 28 16:20:48 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* doc/tutorial2/libxslt_pipes.*: New tutorial from Panagiotis Louridas
	* libxslt.spec.in doc/Makefile.am: integrated the tutorial in the
	  distribution

Sat Sep 25 21:38:57 CEST 2004 Daniel Veillard <daniel@veillard.com>
