@@ -237,7 +237,7 @@ exsltCryptoCryptoApiRc4Encrypt (xmlXPathParserContextPtr ctxt,
 	exsltCryptoCryptoApiReportError (ctxt, __LINE__);
 	goto fail;
     }
-// Now encrypt data.
+/* Now encrypt data. */
     dwDataLen = msglen;
     memcpy (dest, msg, msglen);
     if (!CryptEncrypt (hKey, 0, TRUE, 0, dest, &dwDataLen, msglen)) {
@@ -288,7 +288,7 @@ exsltCryptoCryptoApiRc4Decrypt (xmlXPathParserContextPtr ctxt,
 	exsltCryptoCryptoApiReportError (ctxt, __LINE__);
 	goto fail;
     }
-// Now encrypt data.
+/* Now encrypt data. */
     dwDataLen = msglen;
     memcpy (dest, msg, msglen);
     if (!CryptDecrypt (hKey, 0, TRUE, 0, dest, &dwDataLen)) {
